Bug 554806 Html editor deletes lines below return on certain emails composed in outlook 2003. r=roc,sr=dmose